fix(css): Diff css unreadable

--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -7,11 +7,11 @@
 .highlight .cp { color: #099 } /* Comment.Preproc */
 .highlight .c1 { color: #c00; } /* Comment.Single */
 .highlight .cs { color: #c00; } /* Comment.Special */
-.highlight .gd { background-color: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
+.highlight .gd { background-color: #500; border: 1px solid #c00 } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #f00 } /* Generic.Error */
 .highlight .gh { color: #dfd; } /* Generic.Heading */
-.highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
+.highlight .gi { background-color: #050; border: 1px solid #0c0 } /* Generic.Inserted */
 .highlight .go { color: #aaa } /* Generic.Output */
 .highlight .gp { color: #009; } /* Generic.Prompt */
 .highlight .gs { } /* Generic.Strong */
